Fix alignment.

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -20,6 +20,6 @@ a:hover,a:focus {
 }
 
 .oneline {
-  line-height: 10px;
+  line-height: 20px;
 }
 
